fixing width main wrap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,8 +38,8 @@ body .main__wrap {
   position: relative;
   background: white;
   z-index: 1;
-  margin-left: 10px;
-  margin-right: 10px; }
+  margin-left: auto;
+  margin-right: auto; }
 
 i.fas.fa-pencil-alt {
   color: white;
